适配图片openai的generations接口
